--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,125 +1,194 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Roboto+Slab:300&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Roboto+Slab:300&display=swap');
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
 */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
   border: 0;
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block; }
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
 
-body {
-  line-height: 1; }
-
-ol, ul {
-  list-style: none; }
-
-blockquote, q {
-  quotes: none; }
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-ol, ul {
-  margin-bottom: 1em; }
-
-h1, h2, h3, h4 {
-  font-family: 'Roboto', sans-serif; }
+h1,
+h2,
+h3,
+h4 {
+  font-family: 'Roboto', sans-serif;
+}
 
 h1 {
-  font-size: 36px; }
-
-h2 {
-  font-size: 32px; }
-
-h3 {
-  font-size: 24px;
-  margin-bottom: 1em; }
-
-h4 {
-  font-size: 20px; }
-
-p, li, a, blockquote, span {
-  font-family: 'Roboto Slab', serif;
-  font-size: 17px;
-  font-weight: 300;
-  line-height: 1.5em; }
-
-code, codeblock {
-  background: #eaeaea;
-  font-family: 'Roboto Mono', monospace;
-  font-size: 14px;
-  padding: 0 4px; }
-
-codeblock {
-  display: block;
-  margin: 12px 32px 6px 0;
-  padding: 12px 14px; }
+  font-size: 2rem;
+}
 
 body {
   background: #fafafa;
+  min-height: 100vh;
+}
+
+.main.four-oh-four {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; }
-
-.main {
-  flex: 1 0 auto; }
-  .main.four-oh-four {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: slategray; }
-    .main.four-oh-four .title {
-      font-size: 96px; }
+  justify-content: center;
+  align-items: center;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: slategray;
+}
+.main.four-oh-four .title {
+  font-size: 96px;
+}
 
 .content {
   display: flex;
   flex-direction: column;
-  margin-top: 24px; }
+  margin-top: 24px;
+  padding: 10px;
+}
 
-.box {
-  border: 1px solid #707070;
-  flex: 0 0 49%;
-  margin-bottom: 24px;
-  min-height: 200px;
-  padding: 18px; }
+.infoScreen {
+  width: 100vh;
+  height: 300px;
+  border: 0.4rem solid black;
+  margin: 50px 0;
+  display: flex;
+}
 
-.question .sample {
-  border: 1px solid #cacaca;
-  margin: 12px 32px 6px 0;
-  padding: 12px 14px; }
+.wordStatus {
+  flex: 1;
+}
 
-@media screen and (min-width: 900px) {
-  .content {
-    flex-direction: row;
-    justify-content: space-between;
-    min-height: 500px; } }
+.choosenLetters {
+  flex: 1;
+}
+
+.keyboard {
+  width: 100vh;
+}
+
+.keysRow1,
+.keysRow2,
+.keysRow3 {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+}
+
+.key {
+  border: 0.4rem solid black;
+  border-radius: 0.5rem;
+  margin: 0.5rem;
+  font-size: 1.5rem;
+  padding: 1rem 0.5rem;
+  transition: all 0.07s ease;
+  width: 80px;
+  text-align: center;
+  color: white;
+  background: rgba(0, 0, 0, 0.4);
+  text-shadow: 0 0 0.5rem black;
+  cursor: pointer;
+}
+
+.selectedKey {
+  transform: scale(1.1);
+  border-color: #ffc600;
+  box-shadow: 0 0 1rem #ffc600;
+}
