--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Roboto+Slab:300&display=swap');
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -152,10 +153,15 @@ body {
 }
 
 .wordStatus {
-  flex: 1;
+  flex: 2;
+  display: flex;
+  align-items: center;
+  font-size: 4rem;
+  padding-left: 10px;
+  font-family: 'Roboto Mono', monospace;
 }
 
-.choosenLetters {
+.gameInfo {
   flex: 1;
 }
 
