--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -233,15 +233,6 @@ body {
   padding: 12px 14px;
 }
 
-@media screen and (min-width: 900px) {
-  .content {
-    flex-direction: row;
-    justify-content: space-between;
-    min-height: 500px;
-    padding-top: 24px;
-  }
-}
-
 .partialWord {
   margin: 10px 10px 25px;
   font-size: 24px;
@@ -256,4 +247,9 @@ body {
   line-height: 25px;
   width: 50px;
   margin: 20px;
+}
+
+.error-message {
+  margin-top: 25px;
+  color: red;
 }
